add CRUD functionality connecting to firebase

--- a/public/templates/chat.html
+++ b/public/templates/chat.html
@@ -1,8 +1,4 @@
-<blockquote>
-  {{ name }} <br> {{ message}}
-</blockquote>
-<form name="textForm" ng-submit="sendMessage()">
-  <input type="text" placeholder="Name" ng-model="name" required>
-  <input type="text" placeholder="Message" ng-model="message">
-  <button ng-disabled="textForm.$invalid">Send</button>
+<form ng-submit="addMessage()">
+  <input ng-model="newMessageText" />
+  <button type="submit">Add Message</button>
 </form>
